--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -7,14 +7,15 @@
   font-size: $font-size;
   min-width: 320px;
   margin: 0;
+  scroll-behavior: smooth;
 
   &__body {
     margin: 0;
-    scroll-behavior: smooth;
+  }
 
-    &:has(.menu:target) {
-      background: rgba($background-aside, 0.5);
-    }
+  &:has(.menu:target) {
+    background: rgba($background-aside, 0.5);
+    overflow: hidden;
   }
 }
 
