--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -22,6 +22,7 @@
 
     &-wraper {
       display: flex;
+      justify-content: right;
       width: 100%;
       gap: 20px;
 
@@ -31,9 +32,11 @@
     }
   }
 
-  & > .menu__timetable {
-    grid-column: 1 / 2;
+  &__timetable {
     display: flex;
+    flex-direction: column;
+    font-size: 0.8rem;
+    line-height: 140%;
 
     @include onTablet {
       grid-column: 2 / 4;
@@ -42,6 +45,46 @@
     @include onDesktop {
       grid-column: 3 / 5;
       margin-top: 47px;
+    }
+  }
+
+  &__column {
+    @include onTablet {
+      grid-column: span 2;
+    }
+  }
+
+  &__subtitle {
+    font-weight: 400;
+    margin-bottom: 20px;
+  }
+
+  &__schedule {
+    &--time {
+      font-weight: 600;
+      margin: 0;
+    }
+
+    &--day {
+      display: block;
+      font-weight: 400;
+      margin: 0;
+      padding-bottom: 2px;
+
+      @include onTablet {
+        display: inline-block;
+      }
+    }
+
+    &--weekend {
+      font-weight: 400;
+    }
+  }
+
+  &__weekend {
+    @include onTablet {
+      grid-column: 3;
+      grid-row: 1;
     }
   }
 
@@ -96,9 +139,11 @@
     display: block;
     width: 45%;
     padding-bottom: 15px;
+    transition: all 0.3s;
 
     &:hover {
       color: $main-green;
+      font-weight: 600;
     }
   }
 
