fix header__title, logo center, section__title and add slider for events

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,6 +11,11 @@
     margin: 0;
   }
 
+  &--left {
+    @include onTablet {
+      text-align: left;
+    }
+  }
   @include onTablet {
     font-size: 3.38rem;
   }
