add hover on buttons, change rought transition and fix aside menu

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -110,7 +110,6 @@
 
     &:hover {
       color: $main-green;
-      font-size: 1.1rem;
     }
 
     @include onTablet {
@@ -125,6 +124,12 @@
       background-size: 50%;
       background-repeat: no-repeat;
       background-position: 50% 50%;
+      transition: all 0.3s;
+
+      &:hover {
+        background-color: $main-red;
+        transform: scale(1.05);
+      }
 
       @include onTablet {
         width: 70px;
