--- a/src/styles/blocks/romantism.scss
+++ b/src/styles/blocks/romantism.scss
@@ -20,7 +20,7 @@
     padding-block: 20px;
     position: absolute;
     top: 80%;
-    left: 3%;
+    transform: translateX(5%);
 
     @include onTablet {
       height: 204px;
