--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -60,6 +60,7 @@
     margin: 0;
     border-radius: 0;
     border: none;
+    background-color: $white-color;
     padding-left: 24px;
     transition: all 0.3s;
 
@@ -99,6 +100,12 @@
     background-position: 50% 50%;
     border: none;
     cursor: pointer;
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: $main-green;
+      transform: scale(1.1);
+    }
 
     @include onTablet {
       height: 70px;
