--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -113,6 +113,11 @@
       font-size: 0.88rem;
       font-weight: 400;
       line-height: 150%;
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 
@@ -143,7 +148,7 @@
 
     &:hover {
       color: $main-green;
-      font-weight: 600;
+      transform: scale(1.1);
     }
   }
 
