made contact links clickable,made photos on background on full width,added cursor pointer,fixed title NAMU

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -41,6 +41,14 @@
     padding: 0;
   }
 
+  &__contacts-item {
+    transition: transform $transition-duration-speed;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
   &__line {
     width: 100%;
     height: 1px;
