--- a/src/styles/utils/_resert.scss
+++ b/src/styles/utils/_resert.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
   
 h1,
@@ -15,8 +16,13 @@ li,
 button,
 form {
   margin: 0;
+  padding: 0;
 }
 
 li {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
