--- a/src/styles/blocks/_call-to-action.scss
+++ b/src/styles/blocks/_call-to-action.scss
@@ -5,6 +5,7 @@
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   
   &__name {
     border: 1px solid $main-color;
