--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -4,7 +4,7 @@
   
   &__body {
     margin: 0 auto;
-    max-width: 1440px;
+    //max-width: 1440px;
     background: $pageBackground;
     font-family: "IBM Plex Sans Light", sans-serif;
     
