indents on logo

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,6 +6,7 @@
   }
 
   &__logo {
+    padding-top: 10px;
     width: fit-content;
     @include fontStyle("Montserrat", 30px, 700);
     text-align: center;
