add task solution

--- a/src/blocks/_subscription.scss
+++ b/src/blocks/_subscription.scss
@@ -89,12 +89,7 @@
       box-sizing: border-box;
 
       &:-webkit-autofill {
-        box-shadow: inset 0 0 0 50px rgb(189, 241, 184) !important;
-      }
-
-      &:hover,
-      &:focus {
-        box-shadow: inset 0 0 0 10px rgb(205, 240, 202);
+        box-shadow: inset 0 0 0 50px $secondary-text-color !important;
       }
 
       @include onTablet {
