--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "fonts";
 @import "typography";
 @import "./blocks/page";
+@import "./blocks/swiper";
 @import "./blocks/header";
 @import "./blocks/grafic";
 @import "./blocks/museum";
