--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,6 +1,8 @@
 .gallery {
   @include contentPaddingInline;
   @include pageGrid;
+  @include container;
+  
   padding-bottom: 98px;
 
   @include onDesktop {
