--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,5 @@
 .menu {
   margin: 0 auto;
-  // max-width: 1280px;
   box-sizing: border-box;
 
   height: 150vh;
@@ -12,13 +11,18 @@
   font-family: "IBM Plex Sans", sans-serif;
 
   &__wrapper {
+    background-color: $greenColor;
+  }
+
+  &__container {
     position: relative;
     box-sizing: border-box;
+    margin: 0 auto;
 
     max-width: 1280px;
     @include contentPaddingInline;
     @include paddingTop;
-    background-color: $greenColor;
+
     display: flex;
     flex-direction: column;
 
