--- a/src/styles/blocks/common.scss
+++ b/src/styles/blocks/common.scss
@@ -1,3 +1,8 @@
+.container {
+  max-width: 1280px;
+  box-sizing: border-box;
+}
+
 .title {
   font-family: Montserrat, sans-serif;
   color: $titleColor;
