--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,8 @@
 .header {
   padding-bottom: 70px;
 
+  @include container;
+
   @include onTablet {
     padding-bottom: 88px;
   }
@@ -17,7 +19,7 @@
     @include contentPaddingInline;
 
     position: absolute;
-    top: 0;
+    top: 27px;
     left: 0;
     display: flex;
     gap: 88px;
@@ -26,6 +28,7 @@
 
     @include onTablet {
       @include paddingTop;
+      top: 0;
       gap: 444px;
     }
   }
@@ -47,8 +50,10 @@
   }
 
   &__logo {
-    // position: absolute;
-    // left: 50%;
+    position: absolute;
+    left: 45%;
+    top: 10%;
+    z-index: 2;
     display: flex;
     width: 55px;
     height: 61px;
