--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -129,7 +129,7 @@
     margin: 0;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
     font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 400;
@@ -195,7 +195,7 @@
 }
 
 .content-item-big {
-  position: absolute;
+  position: relative;
   bottom: -60%;
   left: 0;
   box-sizing: border-box;
