--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -124,10 +124,11 @@
     font-weight: 500;
     line-height: 100%;
     text-decoration: none;
+
     transition: all 0.3s ease 0s;
 
     &:hover {
-      font-weight: 700;
+      text-decoration: underline;
     }
   }
 }
