--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -78,6 +78,7 @@
     height: 50px;
     border: 0 solid transparent;
     padding: 18px 24px;
+    outline: none;
 
     @include onTablet {
       width: 374px;
@@ -118,10 +119,26 @@
     background-position: center;
     border: 0 solid transparent;
     cursor: pointer;
+    transition: all 0.3s ease 0s;
 
     @include onTablet {
       width: 70px;
       height: 70px;
     }
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill::first-line,
+input:-webkit-autofill:active,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:hover {
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  -webkit-text-fill-color: $labelColor;
 }
