--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "../styles/utils/reset";
+@import "../styles/utils/mixins";
+@import "../styles/utils/vars";
+@import "../styles/utils/utility";
 
-body {
-  background: $c-gray;
-}
+@import "page.scss";
+@import "header.scss";
+@import "events.scss";
+@import "gallery.scss";
+@import "subscription.scss";
+@import "footer.scss";
