--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$menu-color:rgba(26, 90, 76, 1);
+$backdrop-text-color:rgba(255, 255, 255, 1);
+$square-colr: #f14a27;
+$backdrop-color:rgba(0, 0, 0, 0.5);
+$tile-color:#0f0e08;
