--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -1,3 +1,15 @@
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 .subscription {
   color: #fff;
   text-align: center;
@@ -83,12 +95,8 @@
 
     &:hover {
       background: url(../images/icons/Vector.png) transparent no-repeat center;
-      border: 1px solid #f14a27;
-
-      @include tablet {
-        background: none;
-        border: none;
-      }
+      background-color: #1a5a4c;
+      border-radius: 50%;
     }
 
     @include mobile {
