--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -165,5 +165,9 @@
       width: 70px;
       height: 70px;
     }
+
+    &:hover + .subscribe__button-link {
+      background-color: #a75140;
+    }
   }
 }
