--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,28 +3,34 @@
   top: 0;
   left: 0;
   right: 0;
-  padding-top: 30px;
 
   box-sizing: border-box;
   opacity: 0;
   pointer-events: none;
   background-color: #1a5a4c;
 
-  @include contentWidth;
-  @include contentPadding;
+  &__wrapper {
+    box-sizing: border-box;
+    @include contentPadding;
+    @include contentWidth;
 
-  @include onTablet {
-    @include pageGrid;
-    padding-top: 40px;
+    padding-top: 30px;
+
+    @include onTablet {
+      @include pageGrid;
+
+      padding-top: 40px;
+    }
   }
 
   &:target {
-    opacity: 1;
+    opacity: 100%;
     pointer-events: all;
     z-index: 1;
   }
 
   &__content {
+
     display: flex;
     padding-bottom: 24px;
     margin-bottom: 24px;
@@ -60,7 +66,7 @@
     position: absolute;
     top: 409px;
     left: 0;
-    width: 320px;
+    right: 0;
     height: calc(100vh - 409px);
 
     z-index: 2;
@@ -69,13 +75,13 @@
 
     @include onTablet {
       top: 220px;
-      width: 768px;
+
       height: calc(100vh - 220px);
     }
 
     @include onDesktop {
       top: 220px;
-      width: 1280px;
+
       height: calc(100vh - 220px);
     }
   }
