fixed header block

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -15,11 +15,7 @@
   }
 
   @include onDesktop {
-    align-self: flex-end;
-  }
-
-  &:hover::after {
-    right: -10px;
+    margin-left: 200px;
   }
 
   &::after {
@@ -39,6 +35,10 @@
       width: 70px;
       height: 70px;
     }
+  }
+
+  &:hover::after {
+    right: -10px;
   }
 
   &__link {
