--- a/src/styles/blocks/marker.scss
+++ b/src/styles/blocks/marker.scss
@@ -11,7 +11,9 @@
   writing-mode: vertical-lr;
   width: max-content;
   height: max-content;
-  padding-top: 20px;
+  padding-top: 10px;
+
+  @include hover(color, $colorGreen);
 
   @include onDesktop {
     display: block;
@@ -26,7 +28,7 @@
       left: 50%;
       width: 1px;
       height: 70px;
-      background: $colorGreen;;
+      background: $colorGreen;
     }
   }
 }
