--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,9 @@
 .menu {
-  @extend %paddingBlockMenu;
+  padding-block: 27px;
+
+  @include onTablet {
+    padding-block: 40px;
+  }
 
   @include onDesktop {
     padding-bottom: 48px;
@@ -41,12 +45,12 @@
   &__bottom {
     padding-top: 24px;
     border: none;
-    border-top: 1px solid rgba(255, 255, 255, 0.50);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
 
     @include onTablet {
       padding: 0 0 0 40px;
       border: none;
-      border-left: 1px solid rgba(255, 255, 255, 0.50);
+      border-left: 1px solid rgba(255, 255, 255, 0.5);
     }
 
     @include onDesktop {
