--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,12 +1,4 @@
 .contacts {
-  @include paddingInline;
-
-  @include gridPage;
-  row-gap: 40px;
-
-  @include onTablet {
-    row-gap: 64px;
-  }
 
   &__top {
     grid-column: 1 / -1;
@@ -39,7 +31,6 @@
       @include hover(scale, 1.1);
     }
 
-
     @include onTablet {
       display: flex;
       gap: 32px;
@@ -53,6 +44,7 @@
 
   &__wrapper {
     position: relative;
+    margin-bottom: 40px;
     grid-column: 1 / -1;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -61,11 +53,13 @@
     color: $c-title;
 
     @include onTablet {
+      margin-bottom: 64px;
       grid-column: 2 / 6;
       grid-row: 1 / 2;
     }
 
     @include onDesktop {
+      margin-bottom: 0;
       grid-column: 3 / 7;
       grid-row: 1 / 2;
       column-gap: 30px;
