--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,4 +1,5 @@
 .gallery {
+  @include maxWidth;
   margin-bottom: 100px;
   overflow: hidden;
 
@@ -14,10 +15,14 @@
   }
 
   &__title {
-    @include paddingInline;
+    grid-column: 1 / -1;
 
-    @include onDesktop {
-      grid-column: 1 / -1;
+    @include onTablet {
+      padding-left: 34px;
+    }
+
+    @include onTablet {
+      padding-left: 0;
     }
   }
 }
