--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -49,6 +49,8 @@
     height: 410px;
     overflow: hidden;
 
+    @include hover(scale, 1.02);
+
     @include onTablet {
       height: 543px;
     }
@@ -83,7 +85,5 @@
         background-color: $c-green !important;
       }
     }
-
-
   }
 }
