--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -9,7 +9,7 @@
     grid-column: 1 / -1;
     cursor: pointer;
 
-    @include hover(scale, 1.05);
+    @include hover(scale, 1.02);
 
     @include onTablet {
       height: 520px;
@@ -71,6 +71,7 @@
     display: inline-block;
     position: relative;
     color: $c-title;
+    font-family: "Montserrat", sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 100%;
