--- a/src/styles/blocks/romantic.scss
+++ b/src/styles/blocks/romantic.scss
@@ -1,27 +1,22 @@
 .romantic {
   overflow: hidden;
-  @include paddingInline;
-  @include gridPage;
 
   &__image {
-    width: auto;
+    width: 100%;
     height: 210px;
-    margin-inline: -20px;
-    grid-column: 1 / -1;
 
-    @include hover(scale, 1.05);
+    @include hover(scale, 1.02);
 
     @include onTablet {
-      width: 100%;
+      box-sizing: border-box;
       height: 390px;
-      margin-inline: 0;
-      grid-column: 1 / -1;
+      padding-inline: 34px;
     }
 
     @include onDesktop {
-      width: auto;
+      width: 100%;
       object-fit: cover;
-      margin-inline: -55px;
+      padding-inline: 0;
       height: 550px;
     }
   }
@@ -49,6 +44,7 @@
     }
 
     @include onDesktop {
+      width: 570px;
       grid-column: 4 / -4;
       margin: 0;
       padding: 0;
@@ -102,6 +98,7 @@
   &__title {
     text-align: center;
     color: $c-title;
+    font-family: "Montserrat", sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 100%;
