--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 386px;
-  padding: 88px 20px;
+  padding-block: 88px;
   margin-bottom: 50px;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 0%,
   rgba(0, 0, 0, 0.75) 100%),
@@ -11,16 +11,14 @@
   background-size: cover;
   background-position: center;
 
-  @include gridPage;
-
   @include onTablet {
     height: 380px;
-    padding: 82px 34px;
+    padding-block: 82px;
   }
 
   @include onDesktop {
     height: 550px;
-    padding: 163px 55px;
+    padding-block: 163px;
     margin-bottom: 48px;
   }
 
