--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "./blocks/page";
 @import "./blocks/swiper";
 @import "./blocks/header";
+@import "./blocks/container";
 @import "./blocks/grafic";
 @import "./blocks/museum";
 @import "./blocks/tickets";
