--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/variables";
+@import "utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/icon";
+@import "blocks/logo";
+@import "blocks/button";
+@import "blocks/aside";
+@import "blocks/section";
+@import "blocks/main";
+@import "blocks/image-slider";
+@import "blocks/bottom-section";
+@import "blocks/footer";
