--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -101,9 +101,14 @@
     &--title {
       margin: 0;
       padding: 0;
+
       margin-bottom: 20px;
+      color: #0f0e08;
+      font-family: IBM Plex Sans, sans-serif;
+      font-size: 14px;
       font-style: normal;
       font-weight: 400;
+      line-height: 140.63%;
     }
 
     &--info {
