--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -20,7 +20,7 @@
     z-index: -2;
     left: -20px;
     top: 0;
-    width: 320px;
+    width: 100vw;
     height: 386px;
     object-fit: cover;
 
