--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -84,6 +84,7 @@
     text-decoration: none;
     color: #0f0e08;
     font-family: "IBM Plex Sans", sans-serif;
+    transition: all 0.5s ease-in-out;
 
     &:hover {
       color: grey;
