NAMU landing fixed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -70,7 +70,7 @@
     height: calc(100vh - 409px);
 
     z-index: 2;
-    opacity: 50%;
+    opacity: 0.5;
     background-color: #18181a;
 
     @include onTablet {
