fix: solution fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,29 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/_page";
+@import "./blocks/_container";
+
+@import "./blocks/_logo";
+@import "./blocks/_icon";
+@import "./blocks/_button";
+@import "./blocks/header";
+
+@import "./blocks/_nav";
+@import "./blocks/_work-schedule";
+@import "./blocks/menu";
+
+@import "./blocks/_title";
+@import "./blocks/_photo";
+
+@import "./blocks/_article";
+@import "./blocks/_lecture";
+@import "./blocks/events";
+
+@import "./blocks/gallery";
+
+@import "./blocks/subscribe";
+
+@import "./blocks/_contacts";
+@import "./blocks/contact-us";
+
+@import "./blocks/footer";
