--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+
+$main-text-color: #4e4e4e;
+$secondary-text-color: #0f0e08;
+$main-bg-color: #e5e6e8;
+$secondary-bg-color: #1a5a4c;
+$color-grey: #687480;
+$color-white: #fff;
+
+$transition-duration: 0.3s;
