fix: header background

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,16 +3,17 @@
 
   &::before {
     --height: 300px;
+    --width: 100%;
     content: "";
 
     position: absolute;
     top: 0;
-    left: 0;
     right: 0;
     z-index: -1;
 
     display: block;
     height: var(--height);
+    width: var(--width);
 
     background-image: url(../images/bg-desktop.png);
     background-size: cover;
@@ -21,13 +22,13 @@
 
     @include onTablet {
       --height: 384px;
-      left: 48%;
+      --width: 49%;
       bottom: 0;
     }
 
     @include onDesktop {
       --height: 655px;
-      left: 57%;
+      --width: 57%;
     }
   }
 
