--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -10,6 +10,8 @@
   border-radius: 0%;
   cursor: pointer;
 
+  @include transform;
+
   @include onTablet {
     width: 280px;
     height: 70px;
@@ -34,12 +36,6 @@
     height: 100%;
     width: 50px;
     background-color: #1a5a4c;
-
-    transition: 0.6s;
-
-    &:hover {
-      background-color: #f14a27;
-    }
 
     @include onTablet {
       width: 70px;
