--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,7 +6,7 @@
     position: absolute;
     background-image: url(/images/header/header-image.png);
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: inherit;
     background-size: cover;
     width: 100%;
     min-width: 320px;
@@ -19,10 +19,10 @@
       right: 0;
       max-width: 50%;
       height: 384px;
+      background-position: center;
     }
 
     @include onDesktop {
-      max-width: 56%;
       height: 655px;
     }
 
@@ -64,10 +64,6 @@
     @include onTablet {
       margin: 0 52%;
     }
-
-    @include onDesktop {
-      margin: 0 45%;
-    }
   }
 
   &__botom {
@@ -95,7 +91,7 @@
       width: 340px;
       margin-bottom: 40px;
 
-      font-size: 54px;
+      font-size: 50px;
       line-height: 120%;
 
       text-align: left;
@@ -119,6 +115,7 @@
   }
 
   &__events {
+    text-decoration: none;
     padding: 0;
     margin: 0;
     opacity: 0;
@@ -131,7 +128,8 @@
     transform: rotate(-90deg);
     align-self: flex-start;
     text-transform: uppercase;
-
+    transition: 0.6s;
+  
     &:after {
       display: block;
       position: absolute;
@@ -142,9 +140,18 @@
       right: 60px;
       top: 50%;
     }
-
+  
+    &:hover {
+      color: red;
+  
+      &:after {
+        background-color: red;
+      }
+    }
+  
     @include onDesktop {
       opacity: 1;
     }
   }
+  
 }
