changed mrnu shadow on full size, fixed form refresh, added hover effects in footer links

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -35,6 +35,11 @@
     font-size: 14px;
     line-height: 150%;
     color: $color-headers;
+    
+    &:hover {
+      color: $color-black;
+      font-weight: 700;
+    }
   }
 
   &__contacts {
@@ -42,7 +47,7 @@
   }
 
   &__contacts-item {
-    transition: transform $transition-duration-speed;
+    transition: transform 0.3s;
 
     &:hover {
       transform: scale(1.1);
