--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -1,7 +1,6 @@
 .page {
   scroll-behavior: smooth;
-  
-  
+
   &__body {
     margin: 0 auto;
     //max-width: 1440px;
@@ -9,25 +8,19 @@
     font-family: "IBM Plex Sans Light", sans-serif;
     
     &--with-menu {
+      z-index: 1;
       overflow: hidden;
-                  
+      
       &::after {
+        z-index: -1;
         content: " ";
         position: absolute;
-        top: $height-menu-mobile;
+        top: 0;
         left: 0;
         right: 0;
         height: 100vh;
         background-color: $color-black;
         opacity: 0.5;
-        
-        @include onTablet {
-          top: $height-menu-tablet;
-        }
-
-        @include onDesktop {
-          top: $height-menu-desktop;
-        }
       }
     }
   }
@@ -37,11 +30,11 @@
     top: 0;
     left: 0;
     right: 0;
-    transform: translateY(-100%);
+    transform: translateX(-100%);
     transition: transform $transition-duration-speed;
 
     &:target {
-      transform: translateY(0);
+      transform: translateX(0);
     }
   }
 
