add smooth transition, change header, add autofill to form, change slider on tablet vertion

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -4,6 +4,7 @@
   font-family: $main-font;
   font-size: 36px;
   font-weight: 700;
+  margin-block: 40px;
   @include paddingInline;
 
   &--white {
@@ -16,8 +17,14 @@
       text-align: left;
     }
   }
+
   @include onTablet {
     font-size: 3.38rem;
+    margin-block: 48px;
+  }
+
+  @include onDesktop {
+    margin-block: 56px;
   }
 }
 
@@ -35,6 +42,10 @@
     font-size: 2.25rem;
   }
 
+  @include onDesktop {
+    width: fit-content;
+  }
+
   &::after {
     content: "";
     width: 10px;
@@ -43,6 +54,10 @@
     position: absolute;
     right: -20px;
     top: 45%;
+
+    @include onDesktop {
+      right: -25px;
+    }
   }
 
   &--romantism {
@@ -55,6 +70,13 @@
 
     @include onTablet {
       text-align: left;
+    }
+
+    @include onDesktop {
+      grid-column: 2 / -2;
+      grid-row: 2;
+      padding-block: 0;
+      line-height: 100%;
     }
   }
 }
