--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -2,11 +2,7 @@
   display: inline-block;
   width: 24px;
   height: 24px;
-  transition: all 0.3s;
-
-  &:hover {
-    transform: scale(1.1);
-  }
+  @include hover (transform, scale(1.2));
 
   &--menu {
     background-image: url(../images/icons/menu.svg);
