--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -78,12 +78,8 @@
     text-decoration: none;
     color: $white-color;
     padding-bottom: 15px;
-    transition: all 0.3s;
-
-    &:hover {
-      color: $light-grey-color;
-      transform: scale(1.05);
-    }
+    @include hover (color, $light-grey-color);
+    @include hover (transform, scale(1.05));
 
     @include onTablet {
       width: 45%;
