--- a/src/styles/blocks/romantism.scss
+++ b/src/styles/blocks/romantism.scss
@@ -14,7 +14,6 @@
   &__title {
     background-color: $white-color;
     box-shadow: 0 2px rgba(26, 90, 76, 0.25);
-    grid-column: span 2;
     width: 90%;
     height: 140px;
     padding-block: 20px;
@@ -25,11 +24,20 @@
     @include onTablet {
       height: 204px;
       padding-inline: 55px;
-      padding-block: 50px;
+      padding-top: 45px;
+      padding-bottom: 50px;
     }
 
     @include onDesktop {
       grid-column: 4 / 10;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 20% 80%;
+      row-gap: 16px;
+      padding-inline: 0;
+      padding-top: 45px;
+      padding-bottom: 50px;
+      height: 204px;
     }
   }
 }
