--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -113,11 +113,7 @@
       font-size: 0.88rem;
       font-weight: 400;
       line-height: 150%;
-      transition: all 0.3s;
-
-      &:hover {
-        transform: scale(1.05);
-      }
+      @include hover (transform, scale(1.05));
     }
   }
 
@@ -144,18 +140,15 @@
     display: block;
     width: 45%;
     padding-bottom: 15px;
-    transition: all 0.3s;
-
-    &:hover {
-      color: $main-green;
-      transform: scale(1.1);
-    }
+    @include hover (color, $main-green);
+    @include hover (transform, scale(1.1));
   }
 
   &__rights {
     grid-column: span 2;
     margin: 0 auto;
     margin-top: 80px;
+    padding-bottom: 128px;
 
     @include onTablet {
       grid-column: 1 / -1;
@@ -163,6 +156,7 @@
       flex-direction: row-reverse;
       justify-content: space-between;
       width: 100%;
+      padding-bottom: 35px;
     }
   }
 
