fixed after code review

--- a/src/styles/blocks/contact.scss
+++ b/src/styles/blocks/contact.scss
@@ -1,16 +1,18 @@
 .contact {
   flex-basis: 130px;
+  flex-basis: 45%;
 
-  @include onTablet {
-    flex-basis: 220px;
-  }
+    @include onTablet {
+      min-width: 30%;
+      flex-basis: 220px;
+    }
 
   &__title {
     color: $colorBlack;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
-    line-height: 140.625%;
+    line-height: 140%;
 
     margin-bottom: 20px;
   }
