--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -10,7 +10,7 @@
   &__top {
     position: relative;
     padding-bottom: 70px;
-    border-bottom: 1px solid rgba(26, 90, 76, 0.50);
+    border-bottom: 1px solid rgba(26, 90, 76, 0.5);
 
     @include onTablet {
       padding-bottom: 64px;
@@ -21,7 +21,7 @@
     @include onDesktop {
       padding-right: 64px;
       padding-bottom: 0;
-      border-right: 1px solid rgba(26, 90, 76, 0.50);
+      border-right: 1px solid rgba(26, 90, 76, 0.5);
       border-bottom: none;
       margin-bottom: 86px;
 
@@ -49,11 +49,15 @@
     }
   }
 
+  &__logo-link {
+    align-self: flex-start;
+  }
+
   &__social {
     display: flex;
     gap: 20px;
 
-    @include onTablet{
+    @include onTablet {
       gap: 32px;
     }
   }
@@ -140,8 +144,10 @@
 
   &__nav-item {
     flex-basis: 130px;
+    flex-basis: 45%;
 
     @include onTablet {
+      min-width: 30%;
       flex-basis: 220px;
     }
 
