--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,9 +1,10 @@
 .page {
   font-family: "IBM Plex Sans", sans-serif;
-  font-family: "Montserrat", sans-serif;
   line-height: 100%;
   color: $colorBlack;
   scroll-behavior: smooth;
+
+  overflow-x: hidden;
 
   &__body {
     margin: 0;
