--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -1,9 +1,11 @@
 .schedule {
   flex-basis: 130px;
+  flex-basis: 45%;
 
-  @include onTablet {
-    flex-basis: 220px;
-  }
+    @include onTablet {
+      min-width: 30%;
+      flex-basis: 220px;
+    }
 
   &__title {
     color: #fff;
