--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -18,7 +18,7 @@
 
 .event {
   &__card {
-    width: 280px;
+    min-width: 280px;
 
     @include onTablet {
       width: fit-content;
@@ -31,14 +31,14 @@
   }
 
   &__picture {
-    min-width: 280px;
+    width: 100%;
     height: 210px;
+    object-fit: cover;
     margin-bottom: 20px;
 
     @include hover(transform, scale(1.06));
 
     @include onTablet {
-      width: 100%;
       height: 520px;
       margin-bottom: 44px;
     }
@@ -51,11 +51,11 @@
   }
 
   &__picture-lecture {
-    width: 320px;
+    width: 700px;
     height: 210px;
+    object-fit: cover;
 
     @include onTablet {
-      width: 700px;
       height: 390px;
     }
 
