--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -36,7 +36,7 @@
 
   &__pictures-bottom {
     @include pageGrid;
-    grid-column: 1/ -1;
+    grid-column: 1 / -1;
 
     @include onDesktop {
       height: 360px;
@@ -46,7 +46,7 @@
   &__picture {
     margin: 0 auto;
     display: block;
-    width: 280px;
+    width: 100%;
     height: 410px;
     object-fit: cover;
     object-position: top;
@@ -77,7 +77,7 @@
     &--mobile {
       display: none;
 
-      @include onTablet{
+      @include onTablet {
         display: block;
       }
     }
@@ -85,7 +85,7 @@
     &--tablet {
       display: none;
 
-      @include onDesktop{
+      @include onDesktop {
         display: block;
       }
     }
@@ -98,6 +98,5 @@
     @include onDesktop {
       display: none;
     }
-
   }
 }
